Fix crash with GLib.child_watch_add

Was sometimes crashing when the destroy notify was called.

https://bugzilla.gnome.org/show_bug.cgi?id=688067